Adicionar menu lateral

--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -8,20 +8,29 @@
   <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
   <link rel="stylesheet" href="recuperar-senha.css">
-
   <title>Recuperar senha - SOS WEB</title>
+
 </head>
+<div class="left-navbar">
+  <div class="logo-nav">
+    <img src="../assets/white_icon.svg" alt="sos-logo">
+    <h4>WEB</h4>
+  </div>
+  <div class="nav-options">
+    <div class="logout-nav">
+      <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+      <p>Retornar ao início</p>
+    </div>
+  </div>
+</div>
 
 <body>
   <div class="card-base recup-senha">
-    <h1>RECUPERAR SENHA</h1> <br>
+    <h1>Recuperar Senha</h1> <br>
     <form name="form_login" class="form-login" action="do_login.html" method="POST">
       <input type="password" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" class="input-base"> <br>
-      <input type="password" name="insiranovamente" placeholder="Insira Novamente a Senha" class="input-base">
-      <br>
-      <input type="submit" class="button-base bg-main-color" value="Salvar">
+      <input type="password" name="insiranovamente" placeholder="Insira Novamente a Senha" class="input-base"> <br>
+      <input type="submit" class="button-base bg-main-color" name="botton-salvar" value="Salvar">
     </form>
   </div>
 </body>
-
-</html>
