--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -18,9 +18,6 @@
 </head>
 
 <body>
-
-
-
   <div class="left-navbar">
     <div class="logo-nav">
       <img src="../assets/white_icon.svg" alt="sos-logo">
@@ -67,89 +64,86 @@
               <button class="button-base">Outros</button>
             </div>
           </header>
-
-          <!Modal>
-
-            <Label for="check" class="abrirmodal"> Abrir Modal </Label>
-
-            <input type="checkbox" id="check" class="checkboxModal">
-
-            <div class="modal">
-              <label for="check" class="fecharmodal">X</label>
-
-              <div class="conteudomodal">
-                <h1 class="sitemodal"> www.Aloha.net</h1>
-                <p class="paramodal"> </br> </br> Esse site de compras possui muitos comentários e avaliações de golpes
+          <div class="modal-overlay">
+            <div class="modal-container">
+              <a class="close-modal" type="button" href="../denuncias/denuncias.html">
+                <p class="btn-close-modal">x</p>
+              </a>
+              <div class="modal-header">
+                <h1> www.Aloha.net</h1>
+              </div>
+              <div class="modal-content">
+                <p> Esse site de compras possui muitos comentários e avaliações de golpes
                   e aparentemente a plataforma não pune os estelionatários. </p>
-
               </div>
             </div>
+          </div>
 
-            <main>
+          <main>
 
-              <table style="overflow-x: auto">
-                <tr class="table-header">
-                  <th>Site/E-mail</th>
-                  <th>Nome</th>
-                  <th>Nocividade</th>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Baixa</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Média</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Alta</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Alta</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Alta</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Média</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Alta</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Média</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Baixa</td>
-                </tr>
-                <tr>
-                  <td>www.aloha.com.br</td>
-                  <td>Aloha</td>
-                  <td>Alta</td>
-                </tr>
+            <table style="overflow-x: auto">
+              <tr class="table-header">
+                <th>Site/E-mail</th>
+                <th>Nome</th>
+                <th>Nocividade</th>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Baixa</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Média</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Alta</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Alta</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Alta</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Média</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Alta</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Média</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Baixa</td>
+              </tr>
+              <tr>
+                <td>www.aloha.com.br</td>
+                <td>Aloha</td>
+                <td>Alta</td>
+              </tr>
 
-              </table>
-              <div class="table-footer">
-                <p>Total de registros: 10</p>
-                <p>Página 1 de 143</p>
-              </div>
-            </main>
+            </table>
+            <div class="table-footer">
+              <p>Total de registros: 10</p>
+              <p>Página 1 de 143</p>
+            </div>
+          </main>
         </div>
       </div>
     </div>
