feat: cells in table now open the modal

--- a/src/denuncias/denuncias.html
+++ b/src/denuncias/denuncias.html
@@ -71,54 +71,54 @@
                 <th>Nocividade</th>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Baixa</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Baixa</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Média</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Média</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Média</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Baixa</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Baixa</a></td>
               </tr>
               <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
+                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
               </tr>
             </table>
             <div class="table-footer">
