--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -43,7 +43,7 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-app">
+      <div class="card-desktop">
         <div class="sign-up">
           <!-- DIV DA PÁGINA -->
           <div class="form-container">
