--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -44,8 +44,8 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-app">
-        <div class="card-base denunciations">
+      <div class="card-desktop">
+        <div class="card-mobile denunciations">
           <header>
             <h1>Denúncias</h1>
             <div class="form-search">
