denuncia-modal update

--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -70,83 +70,90 @@
                 <p class="btn-close-modal">x</p>
               </a>
               <div class="modal-header">
-                <h1> www.Aloha.net</h1>
+                <h1> Aloha </h1>
               </div>
               <div class="modal-content">
-                <p> Esse site de compras possui muitos comentários e avaliações de golpes
-                  e aparentemente a plataforma não pune os estelionatários. </p>
+                <p class="Malicioso"> Malicioso </p>
+                <br />
+                <p class="aloha">www.aloha.net</p>
+                <br />
+                Esse site de compras possui muitos comentários e avaliações de golpes
+                e aparentemente a plataforma não pune os estelionatários.
               </div>
             </div>
+
           </div>
-
-          <main>
-
-            <table style="overflow-x: auto">
-              <tr class="table-header">
-                <th>Site/E-mail</th>
-                <th>Nome</th>
-                <th>Nocividade</th>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Baixa</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Média</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Média</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Média</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Baixa</td>
-              </tr>
-              <tr>
-                <td>www.aloha.com.br</td>
-                <td>Aloha</td>
-                <td>Alta</td>
-              </tr>
-
-            </table>
-            <div class="table-footer">
-              <p>Total de registros: 10</p>
-              <p>Página 1 de 143</p>
-            </div>
-          </main>
         </div>
       </div>
+
+      <main>
+
+        <table style="overflow-x: auto">
+          <tr class="table-header">
+            <th>Site/E-mail</th>
+            <th>Nome</th>
+            <th>Nocividade</th>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Baixa</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Média</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Baixa</td>
+          </tr>
+          <tr>
+            <td>www.aloha.com.br</td>
+            <td>Aloha</td>
+            <td>Alta</td>
+          </tr>
+
+        </table>
+        <div class="table-footer">
+          <p>Total de registros: 10</p>
+          <p>Página 1 de 143</p>
+        </div>
+      </main>
     </div>
+  </div>
+  </div>
   </div>
 </body>
 
