--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -79,15 +79,12 @@
               1 Comentário
             </span>
           </div>
-          <!-- <div class="menu-bar">
+          <div class="menu-bar">
             <img src="../assets/icon-user.svg" alt="icon">
             <img src="../assets/icon-home.svg" alt="icon">
-            <img src="../assets/icon-tasklist.svg" alt="icon">
-          </div> -->
+            <img src="../assets/icon-tasklist.svg" alt="icon" </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
 </body>
 
 </html>
