--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -82,7 +82,7 @@
           <div class="menu-bar">
             <img src="../assets/icon-user.svg" alt="icon">
             <img src="../assets/icon-home.svg" alt="icon">
-            <img src="../assets/icon-tasklist.svg" alt="icon" </div>
+            <img src="../assets/icon-tasklist.svg" alt="icon">
           </div>
         </div>
 </body>
