--- a/src/denuncias/denuncias.html
+++ b/src/denuncias/denuncias.html
@@ -44,7 +44,7 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-desktop">
+      <div class="card-app">
         <div class="denunciations">
           <header>
             <h1>Denúncias</h1>
@@ -130,104 +130,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <!-- MOBILE -->
-  <div class="card-mobile denunciations">
-    <header>
-      <div class="option-header">
-        <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
-      </div>
-      <h1>Denúncias</h1>
-      <div class="form-search">
-        <!-- Pesquisa -->
-        <p>Pesquisa</p>
-        <form name="form-search" class="form-search" method="POST">
-          <input type="search" class="input-base" name="search" placeholder="Pesquisa" />
-          <div class="button-search">
-            <img class="img-search" src="../assets/icon-search.svg" alt="Search" />
-          </div>
-        </form>
-      </div>
-      <div class="filters">
-        <!-- Filtro -->
-        <p>Filtros</p>
-        <button class="filter-button">Internacional</button>
-        <button class="filter-button">Nacional</button>
-        <button class="filter-button">Outros</button>
-      </div>
-    </header>
-    <!-- Tabela -->
-    <main>
-      <table style="overflow-x: auto">
-        <tr class="table-header">
-          <!-- Cabeçalho da tabela -->
-          <th>Site/E-mail</th>
-          <th>Nome</th>
-          <th>Nocividade</th>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Baixa</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Baixa</a></td>
-        </tr>
-        <tr>
-          <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-          <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-        </tr>
-      </table>
-      <!-- Rodapé da tabela -->
-      <div class="table-footer">
-        <p>Total de registros: 10</p>
-        <p>Página 1 de 143</p>
-      </div>
-      <!-- Barra de menu-->
-      <div class="menu-bar">
-        <img src="../assets/icon-user.svg" alt="icon">
-        <img src="../assets/icon-home.svg" alt="icon">
-        <img src="../assets/icon-tasklist.svg" alt="icon">
-      </div>
-    </main>
   </div>
 </body>
 
