--- a/src/adicionar-comentarios/adicionar-comentarios.html
+++ b/src/adicionar-comentarios/adicionar-comentarios.html
@@ -43,7 +43,7 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-desktop">
+      <div class="card-app">
         <div class="sign-up">
           <div class="form-container">
             <p class="text-main-color">Comentário</p>
