--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -42,7 +42,7 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-desktop">
+      <div class="card-app">
         <div class="user">
           <img src="../assets/user.svg" alt="logo" />
           <span>
