--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -43,7 +43,7 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-desktop">
+      <div class="card-app">
         <div class="card-mobile guest-denunciations">
           <header>
             <h1>Denúncias</h1>
