--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -45,7 +45,7 @@
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
-      <div class="card-desktop">
+      <div class="card-app">
         <div class="denounce">
           <h1>Minhas Denúncias</h1>
           <!-- Analyses-->
