remove card-mobile

--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -25,7 +25,7 @@
 </div>
 
 <body>
-  <div class="card-mobile recup-senha">
+  <div class="recup-senha">
     <h1>Recuperar Senha</h1> <br>
     <form name="form_login" class="form-login" action="do_login.html" method="POST">
       <input type="password" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" class="input-base"> <br>
