--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -44,7 +44,7 @@
     </div>
     <div class="app-container">
       <div class="card-app">
-        <div class="card-mobile guest-denunciations">
+        <div class="guest-denunciations">
           <header>
             <h1>Denúncias</h1>
             <div class="form-search">
