--- a/src/login/login.html
+++ b/src/login/login.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="sign-up">
+  <div class="card-mobile sign-up">
     <div class="logo-container">
       <img src="../assets/logo.svg" alt="logo" />
       <h1>WEB</h1>
