--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -11,21 +11,9 @@
   <title>Recuperar senha - SOS WEB</title>
 
 </head>
-<div class="left-navbar">
-  <div class="logo-nav">
-    <img src="../assets/white_icon.svg" alt="sos-logo">
-    <h4>WEB</h4>
-  </div>
-  <div class="nav-options">
-    <div class="logout-nav">
-      <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
-      <p>Retornar ao início</p>
-    </div>
-  </div>
-</div>
 
 <body>
-  <div class="recup-senha">
+  <div class="card-mobile recup-senha">
     <h1>Recuperar Senha</h1> <br>
     <form name="form_login" class="form-login" action="do_login.html" method="POST">
       <input type="password" name="insirasuanovasenha" placeholder="Insira Sua Nova Senha" class="input-base"> <br>
