--- a/src/adicionar-comentarios/adicionar-comentarios.html
+++ b/src/adicionar-comentarios/adicionar-comentarios.html
@@ -48,7 +48,7 @@
           <div class="form-container">
             <p class="text-main-color">Comentário</p>
             <form name="form_login" class="form-login" action="do_login.html" method="POST"> <br />
-              Escreva algum Comentário:
+              <p1 class="escreva">Escreva algum Comentário:</p1>
               <textarea name="texto" rows="22" cols="38" style=" resize:none"> preencha com algum texto </textarea>
               <br />
               <br />
