--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -47,7 +47,7 @@
         <div class="sign-up">
           <!-- DIV DA PÁGINA -->
           <div class="form-container">
-            <h1 class="text-main-color">Criar Denúncia </h1>
+            <p class="text-main-color">Criar Denúncia </p>
             <form name="form_login" class="form-login" action="do_login.html" method="POST">
               <b>Nome da instituição/vendedor:</b>
 
