--- a/src/cadastro/cadastro.html
+++ b/src/cadastro/cadastro.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="sign-up">
+  <div class="card-mobile sign-up">
     <div class="form-container">
       <p class="text-main-color">Cadastro</p>
       <form name="form_login" class="form-login" action="do_login.html" method="POST"> <br />
