--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -22,24 +22,10 @@
       <img src="../assets/white_icon.svg" alt="sos-logo">
       <h4>WEB</h4>
     </div>
-    <div class="nav-options">
-      <div class="home-nav">
-        <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
-        <p>Denúncias</p>
-      </div>
-      <div class="user-denunciations-nav">
-        <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
-        <p>Minhas denúncias</p>
-      </div>
-      <div class="logout-nav">
-        <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
-        <p>Sair</p>
-      </div>
-    </div>
   </div>
   <div class="app">
     <div class="top-navbar">
-      <p>Lorem ipsum</p>
+      <p>Fazer login</p>
       <img src="../assets/user.svg" alt="user">
     </div>
     <div class="app-container">
