--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -51,18 +51,18 @@
             <form name="form_login" class="form-login" action="do_login.html" method="POST">
               <b>Nome da instituição/vendedor:</b>
 
-              <input type="text" class="input-base" name="nome" size="40px" />
+              <input class="text" class="input-base" name="nome" size="40px" />
 
               <br />
               <br />
 
               <b>Link ou email da denúncia</b>
 
-              <input type="text" class="input-base" name="link" size="40px" />
+              <input class="text" class="input-base" name="link" size="40px" />
               <br />
               <br />
               <b>Conte sua história:</b>
-              <textarea name="texto" rows="10" cols="40" style="resize:none"> preencha com algum texto </textarea>
+              <textarea class="text" rows="10" cols="50" style="resize:none"> preencha com algum texto </textarea>
               <br />
               <class id="anexar"> Anexar documento <img src="../assets/paper-clip 1.jpg" width="28" height="28">
               </class>
